# zipfr

./: Cargo.toml  README.md  sample.txt  tags.toml
src/: analyzer.rs  cli.rs  lib.rs  main.rs  parser.rs
src/tui/: app.rs  chart.rs  mod.rs
