[package]
name = "zipfr"
version = "0.1.0"
edition = "2021"
description = "A Zipfian text analysis tool with TUI interface"
authors = ["Josh"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
